--- a/YuGuan/res/layout/message_pri.xml
+++ b/YuGuan/res/layout/message_pri.xml
@@ -5,6 +5,58 @@
     android:background="#fcfcfc"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:gravity="left" >
+
+        <LinearLayout
+            android:id="@+id/friendMsgBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:background="#DC2F1F"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp" >
+
+            <TextView
+                android:id="@+id/reciveMsg"
+                style="@style/fontstyle_white_18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="收到的私信" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/myMsgBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:background="#DC2F1F"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp" >
+
+            <TextView
+                android:id="@+id/sendMsg"
+                style="@style/fontstyle_black_18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="发送的私信" />
+        </LinearLayout>
+    </LinearLayout>
+
     <com.yuguan.activities.RefreshListView
         android:id="@+id/messagePriList"
         android:layout_width="fill_parent"
@@ -12,7 +64,6 @@
         android:background="#fff"
         android:cacheColorHint="#00000000"
         android:divider="@android:color/white"
-        android:dividerHeight="20dip"
         android:scrollbars="vertical" >
     </com.yuguan.activities.RefreshListView>
 
