--- a/YuGuan/res/layout/pingfenres.xml
+++ b/YuGuan/res/layout/pingfenres.xml
@@ -99,10 +99,10 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
                         android:paddingLeft="2dp"
+                        android:layout_gravity="center"
                         android:paddingRight="2dp"
-                        android:src="@drawable/star_black" />
+                        android:src="@drawable/pf_mc" />
 
                     <TextView
                         style="@style/fontstyle_guanjun_16"
@@ -110,8 +110,10 @@
                         android:layout_height="wrap_content"
                         android:paddingBottom="2dp"
                         android:paddingTop="2dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:singleLine="true"
-                        android:text="冠军:" />
+                        android:text=":" />
 
                     <TextView
                         android:id="@+id/guanjun"
@@ -119,6 +121,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingBottom="2dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
                         android:paddingTop="2dp"
                         android:singleLine="true"
                         android:text="未选择" />
@@ -135,10 +139,9 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
                         android:paddingLeft="2dp"
                         android:paddingRight="2dp"
-                        android:src="@drawable/star_black" />
+                        android:src="@drawable/pf_mc_02" />
 
                     <TextView
                         style="@style/fontstyle_16"
@@ -147,7 +150,7 @@
                         android:paddingBottom="2dp"
                         android:paddingTop="2dp"
                         android:singleLine="true"
-                        android:text="亚军:" />
+                        android:text=":" />
 
                     <TextView
                         android:id="@+id/yajun"
@@ -174,7 +177,7 @@
                         android:gravity="center"
                         android:paddingLeft="2dp"
                         android:paddingRight="2dp"
-                        android:src="@drawable/star_black" />
+                        android:src="@drawable/pf_mc_03" />
 
                     <TextView
                         style="@style/fontstyle_red_16"
@@ -183,7 +186,7 @@
                         android:paddingBottom="2dp"
                         android:paddingTop="2dp"
                         android:singleLine="true"
-                        android:text="季军:" />
+                        android:text=":" />
 
                     <TextView
                         android:id="@+id/jijun"
@@ -205,13 +208,14 @@
                 android:background="#DC2F1F"
                 android:gravity="center"
                 android:orientation="horizontal"
+                android:layout_marginTop="10dp"
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="5dp" >
 
                 <TextView
-                    style="@style/fontstyle_white_18"
+                    style="@style/fontstyle_white_20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="提交评分" />
@@ -224,13 +228,14 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="horizontal"
+                android:layout_marginTop="10dp"
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="5dp" >
 
                 <TextView
-                    style="@style/fontstyle_16"
+                    style="@style/fontstyle_18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="取消" />
